test_regress/t/t_interface_array_nocolon_bad.out
%Warning-LITENDIAN: t/t_interface_array_nocolon_bad.v:26:26: Little endian instance range connecting to vector: left < right of instance range: [0:2]
                                                           : ... In instance t
   26 |    foo_intf foos [N] (.x(X));  
      |                          ^
                    ... For warning description see https://verilator.org/warn/LITENDIAN?v=latest
                    ... Use "/* verilator lint_off LITENDIAN */" and lint_on around source to disable this message.
%Warning-LITENDIAN: t/t_interface_array_nocolon_bad.v:27:28: Little endian instance range connecting to vector: left < right of instance range: [1:3]
                                                           : ... In instance t
   27 |    foo_intf fool [1:3] (.x(X));  
      |                            ^
%Warning-LITENDIAN: t/t_interface_array_nocolon_bad.v:30:26: Little endian instance range connecting to vector: left < right of instance range: [0:2]
                                                           : ... In instance t
   30 |    foo_subm subs [N] (.x(X));  
      |                          ^
%Warning-LITENDIAN: t/t_interface_array_nocolon_bad.v:31:28: Little endian instance range connecting to vector: left < right of instance range: [1:3]
                                                           : ... In instance t
   31 |    foo_subm subl [1:3] (.x(X));  
      |                            ^
%Error: Exiting due to
